Vor 2018/Compilers/NeðanSækinÞýðandi/y.output
   0  $accept : start $end

   1  start : program

   2  program : program fundecl
   3          | fundecl

   4  $$1 :

   5  fundecl : $$1 NAME '(' ids ')' '{' VAR idlist ';' exprs '}'

   6  ids :
   7      | ids ',' NAME
   8      | NAME

   9  idlist :
  10         | idlist ',' NAME
  11         | NAME

  12  exprs : exprs expr ';'
  13        | expr ';'

  14  args :
  15       | arglist

  16  arglist : arglist ',' expr
  17          | expr

  18  body :
  19       | '{' bodyexpr '}'

  20  bodyexpr : bodyexpr expr ';'
  21           | expr ';'

  22  expr : RETURN expr
  23       | NAME '=' expr
  24       | PRINTLN '(' expr ')'
  25       | expr OP1 expr
  26       | expr OP2 expr
  27       | expr OP3 expr
  28       | expr OP4 expr
  29       | expr OP5 expr
  30       | expr OP6 expr
  31       | expr OP7 expr
  32       | '(' expr ')'
  33       | NAME
  34       | NAME '(' args ')'
  35       | WHILE '(' expr ')' body
  36       | LITERAL

state 0
	$accept : . start $end  (0)
	$$1 : .  (4)

	.  reduce 4

	start  goto 1
	program  goto 2
	fundecl  goto 3
	$$1  goto 4


state 1
	$accept : start . $end  (0)

	$end  accept


state 2
	start : program .  (1)
	program : program . fundecl  (2)
	$$1 : .  (4)

	$end  reduce 1
	NAME  reduce 4

	fundecl  goto 5
	$$1  goto 4


state 3
	program : fundecl .  (3)

	.  reduce 3


state 4
	fundecl : $$1 . NAME '(' ids ')' '{' VAR idlist ';' exprs '}'  (5)

	NAME  shift 6
	.  error


state 5
	program : program fundecl .  (2)

	.  reduce 2


state 6
	fundecl : $$1 NAME . '(' ids ')' '{' VAR idlist ';' exprs '}'  (5)

	'('  shift 7
	.  error


state 7
	fundecl : $$1 NAME '(' . ids ')' '{' VAR idlist ';' exprs '}'  (5)
	ids : .  (6)

	NAME  shift 8
	')'  reduce 6
	','  reduce 6

	ids  goto 9


state 8
	ids : NAME .  (8)

	.  reduce 8


state 9
	fundecl : $$1 NAME '(' ids . ')' '{' VAR idlist ';' exprs '}'  (5)
	ids : ids . ',' NAME  (7)

	')'  shift 10
	','  shift 11
	.  error


state 10
	fundecl : $$1 NAME '(' ids ')' . '{' VAR idlist ';' exprs '}'  (5)

	'{'  shift 12
	.  error


state 11
	ids : ids ',' . NAME  (7)

	NAME  shift 13
	.  error


state 12
	fundecl : $$1 NAME '(' ids ')' '{' . VAR idlist ';' exprs '}'  (5)

	VAR  shift 14
	.  error


state 13
	ids : ids ',' NAME .  (7)

	.  reduce 7


state 14
	fundecl : $$1 NAME '(' ids ')' '{' VAR . idlist ';' exprs '}'  (5)
	idlist : .  (9)

	NAME  shift 15
	';'  reduce 9
	','  reduce 9

	idlist  goto 16


state 15
	idlist : NAME .  (11)

	.  reduce 11


state 16
	fundecl : $$1 NAME '(' ids ')' '{' VAR idlist . ';' exprs '}'  (5)
	idlist : idlist . ',' NAME  (10)

	';'  shift 17
	','  shift 18
	.  error


state 17
	fundecl : $$1 NAME '(' ids ')' '{' VAR idlist ';' . exprs '}'  (5)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 25
	exprs  goto 26


state 18
	idlist : idlist ',' . NAME  (10)

	NAME  shift 27
	.  error


state 19
	expr : LITERAL .  (36)

	.  reduce 36


state 20
	expr : NAME . '=' expr  (23)
	expr : NAME .  (33)
	expr : NAME . '(' args ')'  (34)

	'='  shift 28
	'('  shift 29
	OP1  reduce 33
	OP2  reduce 33
	OP3  reduce 33
	OP4  reduce 33
	OP5  reduce 33
	OP6  reduce 33
	OP7  reduce 33
	')'  reduce 33
	';'  reduce 33
	','  reduce 33


state 21
	expr : PRINTLN . '(' expr ')'  (24)

	'('  shift 30
	.  error


state 22
	expr : WHILE . '(' expr ')' body  (35)

	'('  shift 31
	.  error


state 23
	expr : RETURN . expr  (22)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 32


state 24
	expr : '(' . expr ')'  (32)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 33


state 25
	exprs : expr . ';'  (13)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	';'  shift 41
	.  error


state 26
	fundecl : $$1 NAME '(' ids ')' '{' VAR idlist ';' exprs . '}'  (5)
	exprs : exprs . expr ';'  (12)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	'}'  shift 42
	.  error

	expr  goto 43


state 27
	idlist : idlist ',' NAME .  (10)

	.  reduce 10


state 28
	expr : NAME '=' . expr  (23)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 44


state 29
	expr : NAME '(' . args ')'  (34)
	args : .  (14)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	')'  reduce 14

	expr  goto 45
	args  goto 46
	arglist  goto 47


state 30
	expr : PRINTLN '(' . expr ')'  (24)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 48


state 31
	expr : WHILE '(' . expr ')' body  (35)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 49


state 32
	expr : RETURN expr .  (22)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	')'  reduce 22
	';'  reduce 22
	','  reduce 22


state 33
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)
	expr : '(' expr . ')'  (32)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	')'  shift 50
	.  error


state 34
	expr : expr OP1 . expr  (25)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 51


state 35
	expr : expr OP2 . expr  (26)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 52


state 36
	expr : expr OP3 . expr  (27)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 53


state 37
	expr : expr OP4 . expr  (28)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 54


state 38
	expr : expr OP5 . expr  (29)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 55


state 39
	expr : expr OP6 . expr  (30)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 56


state 40
	expr : expr OP7 . expr  (31)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 57


state 41
	exprs : expr ';' .  (13)

	.  reduce 13


state 42
	fundecl : $$1 NAME '(' ids ')' '{' VAR idlist ';' exprs '}' .  (5)

	.  reduce 5


state 43
	exprs : exprs expr . ';'  (12)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	';'  shift 58
	.  error


state 44
	expr : NAME '=' expr .  (23)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	')'  reduce 23
	';'  reduce 23
	','  reduce 23


state 45
	arglist : expr .  (17)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	')'  reduce 17
	','  reduce 17


state 46
	expr : NAME '(' args . ')'  (34)

	')'  shift 59
	.  error


state 47
	args : arglist .  (15)
	arglist : arglist . ',' expr  (16)

	','  shift 60
	')'  reduce 15


state 48
	expr : PRINTLN '(' expr . ')'  (24)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	')'  shift 61
	.  error


state 49
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)
	expr : WHILE '(' expr . ')' body  (35)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	')'  shift 62
	.  error


state 50
	expr : '(' expr ')' .  (32)

	.  reduce 32


state 51
	expr : expr . OP1 expr  (25)
	expr : expr OP1 expr .  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	OP1  reduce 25
	')'  reduce 25
	';'  reduce 25
	','  reduce 25


state 52
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr OP2 expr .  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	OP1  reduce 26
	')'  reduce 26
	';'  reduce 26
	','  reduce 26


state 53
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr OP3 expr .  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	OP1  reduce 27
	OP2  reduce 27
	OP3  reduce 27
	')'  reduce 27
	';'  reduce 27
	','  reduce 27


state 54
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr OP4 expr .  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	OP1  reduce 28
	OP2  reduce 28
	OP3  reduce 28
	OP4  reduce 28
	')'  reduce 28
	';'  reduce 28
	','  reduce 28


state 55
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr OP5 expr .  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP6  shift 39
	OP7  shift 40
	OP1  reduce 29
	OP2  reduce 29
	OP3  reduce 29
	OP4  reduce 29
	OP5  reduce 29
	')'  reduce 29
	';'  reduce 29
	','  reduce 29


state 56
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr OP6 expr .  (30)
	expr : expr . OP7 expr  (31)

	OP7  shift 40
	OP1  reduce 30
	OP2  reduce 30
	OP3  reduce 30
	OP4  reduce 30
	OP5  reduce 30
	OP6  reduce 30
	')'  reduce 30
	';'  reduce 30
	','  reduce 30


state 57
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)
	expr : expr OP7 expr .  (31)

	.  reduce 31


state 58
	exprs : exprs expr ';' .  (12)

	.  reduce 12


state 59
	expr : NAME '(' args ')' .  (34)

	.  reduce 34


state 60
	arglist : arglist ',' . expr  (16)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 63


state 61
	expr : PRINTLN '(' expr ')' .  (24)

	.  reduce 24


state 62
	expr : WHILE '(' expr ')' . body  (35)
	body : .  (18)

	'{'  shift 64
	OP1  reduce 18
	OP2  reduce 18
	OP3  reduce 18
	OP4  reduce 18
	OP5  reduce 18
	OP6  reduce 18
	OP7  reduce 18
	')'  reduce 18
	';'  reduce 18
	','  reduce 18

	body  goto 65


state 63
	arglist : arglist ',' expr .  (16)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	')'  reduce 16
	','  reduce 16


state 64
	body : '{' . bodyexpr '}'  (19)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	.  error

	expr  goto 66
	bodyexpr  goto 67


state 65
	expr : WHILE '(' expr ')' body .  (35)

	.  reduce 35


state 66
	bodyexpr : expr . ';'  (21)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	';'  shift 68
	.  error


state 67
	body : '{' bodyexpr . '}'  (19)
	bodyexpr : bodyexpr . expr ';'  (20)

	LITERAL  shift 19
	NAME  shift 20
	PRINTLN  shift 21
	WHILE  shift 22
	RETURN  shift 23
	'('  shift 24
	'}'  shift 69
	.  error

	expr  goto 70


state 68
	bodyexpr : expr ';' .  (21)

	.  reduce 21


state 69
	body : '{' bodyexpr '}' .  (19)

	.  reduce 19


state 70
	bodyexpr : bodyexpr expr . ';'  (20)
	expr : expr . OP1 expr  (25)
	expr : expr . OP2 expr  (26)
	expr : expr . OP3 expr  (27)
	expr : expr . OP4 expr  (28)
	expr : expr . OP5 expr  (29)
	expr : expr . OP6 expr  (30)
	expr : expr . OP7 expr  (31)

	OP1  shift 34
	OP2  shift 35
	OP3  shift 36
	OP4  shift 37
	OP5  shift 38
	OP6  shift 39
	OP7  shift 40
	';'  shift 71
	.  error


state 71
	bodyexpr : bodyexpr expr ';' .  (20)

	.  reduce 20


28 terminals, 13 nonterminals
37 grammar rules, 72 states
